methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:20: error: not found: value faire
  faire(V)();faire(V)();faire(V)();faire(V)()
  ^PictureMono1:20: error: not found: value V
  faire(V)();faire(V)();faire(V)();faire(V)()
        ^PictureMono1:20: error: not found: value faire
  faire(V)();faire(V)();faire(V)();faire(V)()
             ^PictureMono1:20: error: not found: value V
  faire(V)();faire(V)();faire(V)();faire(V)()
                   ^PictureMono1:20: error: not found: value faire
  faire(V)();faire(V)();faire(V)();faire(V)()
                        ^PictureMono1:20: error: not found: value V
  faire(V)();faire(V)();faire(V)();faire(V)()
                              ^PictureMono1:20: error: not found: value faire
  faire(V)();faire(V)();faire(V)();faire(V)()
                                   ^PictureMono1:20: error: not found: value V
  faire(V)();faire(V)();faire(V)();faire(V)()
                                         ^