methods.picture.PictureMono1.scala.code
def faireV(){avance();avance();
             baisseBrosse();
             leveBrosse()
             avance()
            gauche()
            avance()
            baisseBrosse()
            leveBrosse()
            recule()
            droite()
             baisseBrosse()
            leveBrosse()
             avance();avance()
             gauche()}




override def run() {
  faire(V)();faire(V)();faire(V)();faire(V)()
}

